@@ -1,5 +1,9 @@
 GNU parted NEWS                                    -*- outline -*-
 
+* Noteworthy changes in release ?.? (????-??-??) [?]
+
+  Parted now recognizes NVMe devices
+
 * Noteworthy changes in release 3.2 (2014-07-28) [stable]
 
 ** New Features
